Completed Main UI and Camera
The HUD and buttons in the UI are all working the camera view switches fine, the data tables need to be remade to properly display which camera the user is using but the camera switching itself works fine.

--- a/SpeakerConfigurator/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SpeakerConfigurator/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -191,7 +191,7 @@ PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
 HorizontalBox="\"Object\" "
-PanelWidget="\"Object\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" "
@@ -214,22 +214,31 @@ K2Node_Variable="\"Object\" "
 UniformInteger="\"Object\" "
 FieldNodeInt="\"Object\" "
 FieldNodeBase="\"Object\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" "
+Section1_Part1_C=
+LevelScriptActor=
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Spkrs/bp/SpeakerLogic_BP.SpeakerLogic_BP
+OpenAssetsAtExit=/Game/HUD/HUD_UI.HUD_UI
+OpenAssetsAtExit=/Game/Levels/Section1_Part1.Section1_Part1:PersistentLevel.Section1_Part1
+OpenAssetsAtExit=/Game/Data/Camera_Structure.Camera_Structure
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Spkrs/bp/SpeakerLogic_BP
-MRUItem1=/Game/Spkrs/bp/SpeakerBP
-MRUItem2=/Game/Levels/Section1_Part1
-MRUItem3=/Game/Data/SpeakerData_Structure
-MRUItem4=/Game/Data/Accent_Data
-MRUItem5=/Game/HUD/HUD_UI
-MRUItem6=/Game/Data/Speaker_Data
-MRUItem7=/Game/Data/Screen_Data
-MRUItem8=/Game/Data/Cabinette_Data
-MRUItem9=/Game/Spkrs/m/comn_Scrn
+MRUItem0=/Game/Data/Cameraname_Data
+MRUItem1=/Game/Data/Camera_Structure
+MRUItem2=/Game/HUD/HUD_UI
+MRUItem3=/Game/Spkrs/bp/SpeakerLogic_BP
+MRUItem4=/Game/Levels/Section1_Part1
+MRUItem5=/Game/Spkrs/bp/SpeakerBP
+MRUItem6=/Game/Data/SpeakerData_Structure
+MRUItem7=/Game/Data/Accent_Data
+MRUItem8=/Game/Data/Speaker_Data
+MRUItem9=/Game/Data/Screen_Data
+MRUItem10=/Game/Data/Cabinette_Data
+MRUItem11=/Game/Spkrs/m/comn_Scrn
 
 [DetailCategories]
 SpeakerBP_C.Default=True
@@ -450,6 +459,54 @@ UniformInteger.ComponentReplication=True
 UniformInteger.Activation=True
 UniformInteger.Variable=True
 UniformInteger.Cooking=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Replication=True
+SphereReflectionCapture.HLOD=True
+SphereReflectionCapture.Physics=True
+SphereReflectionCapture.Networking=True
+SphereReflectionCapture.Input=True
+SpeakerLogic_BP_C.TransformCommon=True
+SpeakerLogic_BP_C.Networking=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.HLOD=True
+DirectionalLight.Physics=True
+DirectionalLight.Networking=True
+DirectionalLight.Actor=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+K2Node_CustomEvent.GraphNodeDetail=True
+Generic.None=True
+Camera_Structure.None=True
+DataTable.DataTable=True
+DataTable.File Path=True
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -530,7 +587,10 @@ bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
 
 [DetailCategoriesAdvanced]
-TextBlock.Appearance=False
+TextBlock.Appearance=True
+TextBlock.Accessibility=False
+TextBlock.Behavior=True
+TextBlock.Clipping=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Spkrs/bp/SpeakerBP.SpeakerBP=1
@@ -543,6 +603,8 @@ TextBlock.Appearance=False
 /Game/Data/Cabinette_Data.Cabinette_Data=1
 /Game/Data/Screen_Data.Screen_Data=1
 /Game/Data/Speaker_Data.Speaker_Data=1
+/Game/Data/Camera_Structure.Camera_Structure=1
+/Game/Data/Cameraname_Data.Cameraname_Data=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -786,6 +848,27 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.SelectedPaths=/Game/Data
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=602.000 Y=143.000
@@ -1826,4 +1909,19 @@ RecentsFiles=C:/Users/Gurvinder Nagra/Documents/gta5/UE_5.2/Engine/Plugins/Anima
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
+
+[DetailCustomWidgetExpansion]
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.Cameras
+Section1_Part1_C=PropertyWrapper.DefaultValueCategory.Cameras
+HUD_UI_C=PropertyWrapper.DefaultValueCategory.Cameras
+MulticastInlineDelegatePropertyWrapper=PropertyWrapper.DefaultValueCategory.Cameras
+EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.Cameras
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Cameras
+K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.Cameras
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Cameras
+EdGraph=
+K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.Cameras
+
+[PlacementMode]
+RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 
